// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalAlert Dismissable renders correctly 1`] = `
<div>
  <section
    aria-label="Alert title"
    class="css-1v0vzf6-boxStyles-GlobalAlert"
  >
    <div
      class="css-gb210y-boxStyles-GlobalAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Warning"
        class="css-fyxrud-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m23.1 20.1-9.3-18C13.4 1.4 12.7 1 12 1s-1.4.4-1.8 1.1l-9.3 18c-.3.6-.3 1.4.1 2 .4.6 1 1 1.7 1h18.7c.7 0 1.31-.33 1.7-1 .36-.6.3-1.4 0-2ZM12 19c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1Zm1-5c0 .6-.4 1-1 1s-1-.4-1-1V9c0-.6.4-1 1-1s1 .4 1 1v5Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-13n9wj6-boxStyles-GlobalAlert"
    >
      <div
        class="css-1k241lf-boxStyles"
      >
        <h2
          class="css-1qnzlr7-boxStyles-GlobalAlert"
        >
          Alert title
        </h2>
        <div
          class="css-1inkcod-boxStyles-GlobalAlert"
        >
          <p
            class="css-dbscsh-boxStyles"
          >
            Alert description.
          </p>
        </div>
      </div>
      <button
        aria-label="Close"
        class="css-1oaw25b-BaseButton-GlobalAlertCloseButton"
        type="button"
      >
        <span>
          <span
            class="css-oobk4c-Button"
          >
            Close
          </span>
          <span
            aria-live="assertive"
          />
        </span>
        <svg
          aria-hidden="true"
          class="css-16yahzk-Button"
          clip-rule="evenodd"
          fill-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18M6 6l12 12"
          />
        </svg>
      </button>
    </div>
  </section>
</div>
`;

exports[`GlobalAlert with tone info renders correctly 1`] = `
<div>
  <section
    aria-label="Alert title"
    class="css-h8illz-boxStyles-GlobalAlert"
  >
    <div
      class="css-18no75j-boxStyles-GlobalAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Information"
        class="css-fyxrud-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1Zm0 17a1 1 0 0 1-1-1v-6a1 1 0 1 1 2 0v6a1 1 0 0 1-1 1Zm0-10a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-13n9wj6-boxStyles-GlobalAlert"
    >
      <div
        class="css-1k241lf-boxStyles"
      >
        <h2
          class="css-1drfnkh-boxStyles-GlobalAlert"
        >
          Alert title
        </h2>
        <div
          class="css-1inkcod-boxStyles-GlobalAlert"
        >
          <p
            class="css-dbscsh-boxStyles"
          >
            Alert description.
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`GlobalAlert with tone warning renders correctly 1`] = `
<div>
  <section
    aria-label="Alert title"
    class="css-1v0vzf6-boxStyles-GlobalAlert"
  >
    <div
      class="css-gb210y-boxStyles-GlobalAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Warning"
        class="css-fyxrud-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m23.1 20.1-9.3-18C13.4 1.4 12.7 1 12 1s-1.4.4-1.8 1.1l-9.3 18c-.3.6-.3 1.4.1 2 .4.6 1 1 1.7 1h18.7c.7 0 1.31-.33 1.7-1 .36-.6.3-1.4 0-2ZM12 19c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1Zm1-5c0 .6-.4 1-1 1s-1-.4-1-1V9c0-.6.4-1 1-1s1 .4 1 1v5Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-13n9wj6-boxStyles-GlobalAlert"
    >
      <div
        class="css-1k241lf-boxStyles"
      >
        <h2
          class="css-1drfnkh-boxStyles-GlobalAlert"
        >
          Alert title
        </h2>
        <div
          class="css-1inkcod-boxStyles-GlobalAlert"
        >
          <p
            class="css-dbscsh-boxStyles"
          >
            Alert description.
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;
